assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Roboto, sans-serif;
    font-weight: 600;
    color: #3a3a3a; 
    background-image: url ('../assets/images/lavender-photo.jpeg');
    background-color: rgba(188,164,215,0.5);
}

h1, h2 {
    font-family: Roboto, sans-serif;
    text-transform: uppercase;
    text-decoration: underline;
    text-align: center;
    letter-spacing: 3px;
}

p{
    width: 50%;
    padding: 20px;
    line-height: 20px;

}

img {
    height: 300px;
    width: 30%;
    padding: 30px 20px;
    float: left;
    clear: both;
}


ul {
    padding: 20px;
}

li {
    list-style: none;
    margin: 0;
}

footer {
    margin: 0 auto;
    position: static;
    text-align: right;
}

form {
    position: absolute;
    left: 10%;
    margin: 100px;
    padding: 30px;
    border: 2px solid grey;
    border-radius: 7px;
    background-color: rgba(254,147,105,0.2);
}

.form-input {
    display: block;
    width: 50%;
    height: 20px;
    border: 1px solid grey;
    border-radius: 7px;

}

.active {
    border-bottom: 1px solid #a393eb;
}


#check-in-page {
    text-decoration: none;
}

#logo {
    font-size: 350%;
    padding: 20px;
    color: #9C89B3;
    letter-spacing: 3px;
    text-decoration: none;
    float: left;
}

/* social media links */

#navigation-menu {
    font-size: 90%;
    letter-spacing: 3px;
}

#navigation-menu li {
    float: right;
    list-style-type: none;
    margin-right: 10px;

}

#navigation-menu a{
    font-size: 200%;
    text-align: right;
    text-decoration: none;
    color: #4B4453;
    margin-left: 10px;
    padding: 15px;
}

#navigation-menu, #logo {
    line-height: 75px;
}

#navigation-menu a:hover {
    color: #a393eb;
}

/* hero image */

#hero-image {
    height: 600px;
    width: 100%;
    background: url ('assets/images/hero-image.jpeg');
}

.feelgood {
    display: block;
}

footer > p {
    font-size: 110%;
    float: left;
    position: relative;
    left: -150px;
    top: 30px;
    
}

#social-media {
    color: #4B4453;
    float: right;
    display: inline;

}

#social-media li {
    display: inline;
}

label {
    line-height: 20px;
}


/* #image-right{
    float: right;
    clear: both;
}


header{
    img src="https://as2.ftcdn.net/jpg/01/64/58/73/500_F_164587390_wHVS1RfAmUkEoTtKDKfXGaAsYIH7vFCh.jpg"
}
*/


/*
.text-right {
    float: right;
    clear: both;
    position: relative;
    text-align: left;
    width: 60%;
}
*/

